fixed dark mode toggle

--- a/media.css
+++ b/media.css
@@ -54,6 +54,6 @@
   }
   .disc {
     top: 1%;
-    right: 8%;
+    right: 1%;
   }
 }
